[gd_scene load_steps=4 format=3 uid="uid://8ae61tf8kdk6"]

[ext_resource type="Script" path="res://Scenes/connector.gd" id="1_a0w3j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fa544"]
size = Vector2(5, 45)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gnedl"]
size = Vector2(6, 44)

[node name="Connector" type="Node2D"]
script = ExtResource("1_a0w3j")

[node name="RightColorRect" type="ColorRect" parent="."]
offset_left = 315.0
offset_top = -23.0
offset_right = 355.0
offset_bottom = 22.0
color = Color(0, 0, 0, 1)

[node name="Area2D" type="Area2D" parent="RightColorRect"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightColorRect/Area2D"]
position = Vector2(17, 22)
shape = SubResource("RectangleShape2D_fa544")

[node name="LeftColorRect" type="ColorRect" parent="."]
offset_left = -346.0
offset_top = -24.0
offset_right = -306.0
offset_bottom = 21.0
color = Color(0, 0, 0, 1)

[node name="Area2D" type="Area2D" parent="LeftColorRect"]
position = Vector2(19, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftColorRect/Area2D"]
position = Vector2(3, 23)
shape = SubResource("RectangleShape2D_gnedl")

[connection signal="body_entered" from="RightColorRect/Area2D" to="." method="_on_right_area_2d_body_entered"]
[connection signal="body_exited" from="RightColorRect/Area2D" to="." method="_on_right_area_2d_body_exited"]
[connection signal="body_entered" from="LeftColorRect/Area2D" to="." method="_on_left_area_2d_body_entered"]
[connection signal="body_exited" from="LeftColorRect/Area2D" to="." method="_on_left_area_2d_body_exited"]
